# wallflower

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  agents.md  next.config.mjs  package-lock.json  package.json
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-tauri-app-shell-storage-api-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEW.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-playback-metadata-design-system-notifications/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-recording-engine-system-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-RESEARCH.md  03-UI-SPEC.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-ml-analysis-pipeline/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  04-RESEARCH.md  04-UI-SPEC.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-source-separation-export/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-REVIEW.md  05-UI-SPEC.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-spatial-explorer-accessibility-distribution/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  (+14 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
crates/wallflower-app/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
crates/wallflower-app/capabilities/: default.json
crates/wallflower-app/src/: lib.rs  main.rs  tray.rs
crates/wallflower-app/src/api/: analysis.rs  mod.rs  spatial.rs
crates/wallflower-app/src/commands/: analysis.rs  bookmarks.rs  export.rs  import.rs  jams.rs  metadata.rs  mod.rs  recording.rs  samples.rs  settings.rs  spatial.rs  status.rs
crates/wallflower-app/src/sidecar/: grpc_client.rs  mod.rs
crates/wallflower-cli/: Cargo.toml
crates/wallflower-cli/src/: main.rs
crates/wallflower-core/: Cargo.toml
crates/wallflower-core/src/: error.rs  lib.rs  peaks.rs  photos.rs
crates/wallflower-core/src/analysis/: mod.rs  provider.rs  queue.rs
crates/wallflower-core/src/audio/: downsample.rs  mod.rs
crates/wallflower-core/src/bookmarks/: mod.rs  schema.rs
crates/wallflower-core/src/db/: mod.rs  schema.rs
crates/wallflower-core/src/device/: mod.rs
crates/wallflower-core/src/export/: mod.rs  sanitize.rs  sidecar.rs  writer.rs
crates/wallflower-core/src/import/: hasher.rs  metadata.rs  mod.rs
crates/wallflower-core/src/recording/: device.rs  mod.rs  scheduler.rs  silence.rs  writer.rs
crates/wallflower-core/src/settings/: mod.rs
crates/wallflower-core/src/watcher/: mod.rs
migrations/: V1__initial_schema.sql  V2__metadata_tables.sql  V3__recording_tables.sql  V4__analysis_tables.sql  V5__bookmarks_exports.sql
proto/: wallflower_analysis.proto
scripts/: prepare-sidecar-bundle.sh
sidecar/: pyproject.toml
sidecar/src/wallflower_sidecar/: __main__.py  hardware.py  server.py  wallflower_analysis_pb2.py  wallflower_analysis_pb2_grpc.py
sidecar/src/wallflower_sidecar/analyzers/: base.py  key.py  loops.py  sections.py  separation.py  tempo.py
sidecar/src/wallflower_sidecar/models/: manager.py
sidecar/tests/: conftest.py  test_key.py  test_loops.py  test_models.py  test_provider.py  test_sections.py  test_separation.py  test_tempo.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: UpdateBadge.tsx  device-import-dialog.tsx  providers.tsx  tauri-event-listener.tsx
src/lib/: format.ts  tauri.ts  types.ts  update-checker.ts
(+86 files in other folders)
