[workspace]
members = [
    "crates/wallflower-core",
    "crates/wallflower-app",
    "crates/wallflower-cli",
]
resolver = "2"

[workspace.dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
