[project]
name = "wallflower-sidecar"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "essentia>=2.1b6.dev1389",
    "librosa>=0.10",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "grpcio-health-checking>=1.60",
    "numpy>=2.0",
    "soundfile>=0.13",
    "scipy>=1.0",
    "scikit-learn>=1.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallflower_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
