[package]
name = "wallflower-app"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wallflower-core = { path = "../wallflower-core" }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tauri-plugin-notification = "2"
