[package]
name = "wallflower-app"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wallflower-core = { path = "../wallflower-core" }
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
crossbeam-channel = "0.5"
uuid = { workspace = true }
hound = "3.5"
rusqlite = { workspace = true }
notify = "8"
dirs = "6"
