[package]
name = "wallflower-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wallflower"
path = "src/main.rs"

[dependencies]
wallflower-core = { path = "../wallflower-core" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
