[package]
name = "wallflower-core"
version = "0.2.1"
edition = "2024"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
sha2 = "0.10"
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
cpal = "0.15"
crossbeam-channel = "0.5"
libc = "0.2"
tempfile = "3"
notify = "8"
dirs = "6"
walkdir = "2"
image = "0.25"
